# Tutorials

./: .gitignore
C++/: README.md
C++/Tutorial-Cpp/: README.md  run.sh
C++/Tutorial-Cpp/basics/: basics.cpp  (+10 more)
C++/Tutorial-Cpp/cmake/03_simple_project_structure/: CMakeLists.txt  README.md
C++/Tutorial-Cpp/cmake/03_simple_project_structure/apps/: add_and_print.cxx
Python/: Tutorial-PyProj.py
Python/Tutorial-ConfigFiles/: README.md  config.yaml  main.py
Python/Tutorial-Flask/: .gitignore  README.md  environment.yml
Python/Tutorial-IO/: http_basics.py  input_output.py  input_output_excel.py  input_output_hdf.py  input_output_html.py  input_output_json.py  input_output_sqlite.py  input_output_xml.py
Python/Tutorial-Logger/: 01_simplest_use_case.py  02_logging_across_modules.py  02_root_logger_configuration.py  03_logging_across_modules.py  03_making_new_loggers.py  04_configuring_new_loggers.py  04_making_new_loggers.py  05_configuring_new_loggers.py  README.md  log_msg_module.py  multiprocessing_logging.py  root_log_msg_module.py
Python/Tutorial-NLP/: nltk_basics.py  sklearn_basics.py  spacy_basics.py
Python/Tutorial-NumPy/: basics.py  scipy_basics.py  scipy_signals.ipynb
Python/Tutorial-Pandas/: basics.py
Python/Tutorial-PyTest/: README.md
Python/Tutorial-PyTorch/: model_training.py
Python/Tutorial-Python/: concurrency.py  dates_and_time.py  environment.py  itertools_basics.py  multiprocessing_test.py  regular_expressions.py  strings.py
Python/Tutorial-SciKitLearn/: 01_overview.ipynb  02_estimators.ipynb  example_datasets.ipynb
Python/Tutorial-SimPy/: basics.py
Python/Tutorial-StatsModels/: basics.py
Python/Tutorial-TensorFlow/: README.md  RecurrentNeuralNetwork.ipynb  model_example.py  modules_and_keras.py  tensors.py  variables_and_autodifferentiation.py
Python/Tutorial-Visualization/: plotly_basics.ipynb  plotly_basics.py  plotly_trace_types.ipynb  requirements.txt  seaborn_basics.ipynb
Tutorial-AWS/: SageMaker-Tutorial.ipynb
Tutorial-Assembly/AppleSilicon/: README.md  run.sh
Tutorial-Bash/: README.md  array_basics.sh  awk_basics.sh  bash_cli_basics.sh  date_basics.sh  job_control.sh  math_basics.sh  network_basics.sh  print_basics.sh  regular_expressions.sh  sed_basics.sh  sed_one_liners.sh  string_manipulation_basics.sh  system_info_cmds.sh  testing_vars.sh  zshell_configuration.sh
Tutorial-CMake/: .gitignore
Tutorial-CMake/01_cmake_hello_world/: CMakeLists.txt
Tutorial-CMake/02_simple_cmake/: CMakeLists.txt  README.md
Tutorial-CronJobs/: README.md
Tutorial-Doxygen/: README.md
Tutorial-Doxygen/01_basics/: README.md
Tutorial-Doxygen/02_hello_world/: Doxyfile  README.md  hello_world.cpp
Tutorial-HTML/: README.md  basics.html  bootstrap_basics.html  css_basics.css  css_basics.html  js_html_bom.html  js_html_dom.html  layout.html
Tutorial-Haskell/: README.md
Tutorial-Haskell/01_hello/: build.sh  build_and_run.sh
Tutorial-Haskell/02_basics/: base_modules.hs  basics.hs  monads_and_functors.hs  semigroups_and_monoids.hs
Tutorial-Heroku/: README.md
Tutorial-JavaScript/: README.md  basics.js  datetime.js  flow_control.js  plotly.html  regex.js  scope.js  type_conversion.js
Tutorial-Julia/: README.md  Run.jl  Test.jl  arrays.jl  basics.jl  collections.jl  regex.jl  strings.jl  types.jl  unicode_101.jl
Tutorial-Julia/LexEnv/: Manifest.toml  Project.toml
Tutorial-R/: IO_and_OS.r  README.md  basics.r  graphics.r  hello_world.r  stats.r
Tutorial-RegEx/: README.md  regular_expressions.pl
Tutorial-SQL/: IPython_SQL.ipynb  README.md  sql_doctest.py  sql_in_jupyter.txt
Tutorial-SQL/MySQL/: README.md  basics.sql  benchmarking.sql  create_table.sql  dates_and_time.sql  delete.sql  flow_control.sql  temporary_data_store.sql  user_functions.sql  variables.sql  window_functions.sql
Tutorial-SQL/SQLite/: README.md  basics.sql  creating_tables.sql  functions.sql  globals.sql  hello_world_exec.sql  joins.sql  python_basics.py  regexp.sql  table_management.sql  unions.sql  where.sql  windows.sql
Tutorial-Scala/: README.md
Tutorial-Spark/: IO.py  PysparkJupyter.ipynb  README.md  basics.py
(+50 files in other folders)
